kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tournoi-app
  labels:
    name: tournoi-app
